--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li> <a href="#">Contact</a> </li>
             </div>
             <div class="right">
-                <a href="#">Let's <br> <span>Talk</span></a>
+                <a href="#">Let's <br> <span>Talks</span></a>
             </div>
         </div>
     </div>
